<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".AddMedicineActivity">

    <TextView
        android:id="@+id/titleAddMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medicine"
        android:textSize="32sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editMedicineName"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/medicine_name_hint"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:autofillHints="text"
        android:inputType="text"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"

        app:layout_constraintTop_toBottomOf="@id/titleAddMedicine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Spinner
        android:id="@+id/spinnerMedType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editMedicineName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editDosePerUse"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/dose_per_use_hint"

        android:autofillHints="quantity"
        android:inputType="number"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/spinnerMedType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editPurchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"

        android:autofillHints="date"
        android:hint="@string/purchase_date_hint"
        android:importantForAutofill="yes"

        android:inputType="date"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDosePerUse" />

    <EditText
        android:id="@+id/editExpiryDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/expiry_date_hint"
        android:inputType="date"
        android:autofillHints="expirationDate"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPurchaseDate"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/editTotalDose"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"

        android:autofillHints="quantity"
        android:hint="@string/total_dose_hint"
        android:inputType="number"

        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"

        app:layout_constraintTop_toBottomOf="@+id/editExpiryDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonSaveMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/save_medicine"

        app:layout_constraintTop_toBottomOf="@id/editTotalDose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>