<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textMedicineName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name"
        android:textSize="18sp"
        android:maxLines="1"
        android:ellipsize="end"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Status Tag -->

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/status_tag_bg"

        android:paddingStart="10dp"
        android:paddingTop="4dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="14sp"

        app:layout_constraintEnd_toStartOf="@+id/textDose"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Num Remaining -->
    <TextView
        android:id="@+id/textDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_dose"
        android:textSize="15sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Medicine Type: Rescue / Controller -->
    <TextView
        android:id="@+id/textMedicineType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescue"
        android:textColor="#666666"
        android:textSize="14sp"
        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMedicineName" />


    <!-- Dose per use (Only for Controller, adapter will hide for Rescue) -->
    <TextView
        android:id="@+id/textDosePerUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/each_use_1"
        android:textColor="#666666"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:visibility="gone"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMedicineType" />

</androidx.constraintlayout.widget.ConstraintLayout>