<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".SOSTriageActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvSosTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sos_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvQ1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sos_q1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"


        app:layout_constraintTop_toBottomOf="@id/tvSosTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <RadioGroup
        android:id="@+id/rgQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvQ1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/q1Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_yes" />

        <RadioButton
            android:id="@+id/q1No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_no"
            android:layout_marginStart="20dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvQ2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sos_q2"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"

        app:layout_constraintTop_toBottomOf="@id/rgQ1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <RadioGroup
        android:id="@+id/rgQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvQ2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/q2Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_yes" />

        <RadioButton
            android:id="@+id/q2No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_no"
            android:layout_marginStart="20dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvQ3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sos_q3"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"

        app:layout_constraintTop_toBottomOf="@id/rgQ2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <RadioGroup
        android:id="@+id/rgQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvQ3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/q3Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_yes" />

        <RadioButton
            android:id="@+id/q3No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sos_no"
            android:layout_marginStart="20dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_next"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/rgQ3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSafetyNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Safety note: This is guidance, not a diagnosis. If in doubt, call emergency."
        android:textColor="#FFFFFF"
        android:background="#F5A623"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>