<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.activities.SOSSecondaryActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvFormTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/sos_form_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editRescueAttempts"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/sos_recent_rescue_attempts"
        android:layout_marginTop="30dp"

        android:inputType="number"
        android:autofillHints="none"
        android:importantForAutofill="no"
        android:maxLength="3"


        app:layout_constraintTop_toBottomOf="@id/tvFormTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editCurrentPEF"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/sos_current_pef"
        android:layout_marginTop="20dp"

        android:inputType="number"
        android:autofillHints="none"
        android:importantForAutofill="no"
        android:maxLength="4"

        app:layout_constraintTop_toBottomOf="@id/editRescueAttempts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_submit"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/editCurrentPEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSafetyNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Safety note: This is guidance, not a diagnosis. If in doubt, call emergency."
        android:textColor="#FFFFFF"
        android:background="#F5A623"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>